--- a/szablon/main.html
+++ b/szablon/main.html
@@ -1,4 +1,18 @@
-<!DOCTYPE html><html lang="pl"><head><title>Szablon strony w D3</title><meta charset="utf-8"><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="shortcut icon" href="/favicon.ico"><!-- bower:js -->
+<!DOCTYPE html>
+<html lang="pl">
+  <head>
+    <title>Projekt Zespolow || MPK</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <script>
+      document.write('<script src="http://'
+              + (location.host || 'localhost').split(':')[0]
+              + ':35729/livereload.js"></'
+              + 'script>')
+      
+    </script><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
@@ -7,6 +21,33 @@
 <script src="bower_components/superfish/dist/js/superfish.js"></script>
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
-<!-- endbower --><script src="scripts/vendor.min.js"></script><!-- bower:css -->
+<!-- endbower -->
+    <!-- MAPY GOOGLA -->
+    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js"></script><!-- MAPY GOOGLA -->
+    <script src="scripts/vendor.min.js"></script><!-- bower:css -->
 <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
-<!-- endbower --><link rel="stylesheet" href="css/main.css"></head><body><div class="box"><div class="box2"><p>tester</p></div></div></body></html>
+<!-- endbower -->
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <!--
+    Created by salimike on 18.03.16.
+    
+    -->
+    <div class="header">
+      <div class="header__corner"></div>
+      <div class="header__switcher -hidden">
+        <div class="background"></div>
+        <ul class="header__panel">
+          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG"></span>Logowanie</span></li>
+          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG"></span>Logowanie</span></li>
+          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG"></span>Logowanie</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="googleMaps">
+      <div id="googleMaps" class="googleMaps__API"></div>
+    </div>
+  </body>
+</html>
