--- a/szablon/main.html
+++ b/szablon/main.html
@@ -59,12 +59,11 @@
     <div class="panelLogin -hidden">
       <div class="panelLogin__wrapper">
         <div class="panelLogin__title">Panel Logowania</div>
-        <div class="panelLogin__text">Jakis tam tekst wstępny
-          <div class="panelLogin__form">
-            <input placeholder="Prosze podać login">
-            <input placeholder="Prosze podać nazwisko">
-            <button type="submit">Zaloguj</button>
-          </div>
+        <div class="panelLogin__text">Prosze podać dane do logowania.</div>
+        <div class="panelLogin__form">
+          <input placeholder="Prosze podać login">
+          <input placeholder="Prosze podać nazwisko">
+          <button type="submit">Zaloguj</button>
         </div><span class="panelLogin__close"><span class="panelLogin__icon fa fa-times"></span></span>
       </div>
     </div>
