--- a/szablon/main.html
+++ b/szablon/main.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html lang="pl"><head><title>Szablon strony w D3</title><meta charset="utf-8"><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="shortcut icon" href="/favicon.ico"><!-- bower:js -->
+<!DOCTYPE html>
+<html lang="pl">
+  <head>
+    <title>Szablon strony w D3</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico"><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
@@ -7,6 +14,18 @@
 <script src="bower_components/superfish/dist/js/superfish.js"></script>
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
-<!-- endbower --><script src="scripts/vendor.min.js"></script><!-- bower:css -->
+<!-- endbower -->
+    <script src="scripts/vendor.min.js"></script><!-- bower:css -->
 <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
-<!-- endbower --><link rel="stylesheet" href="css/main.css"></head><body><div class="box"><div class="box2"><p>tester</p></div></div></body></html>
+<!-- endbower -->
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="box">
+      <div class="box2">
+        <p>tester</p>
+        <p>czesc</p>
+      </div>
+    </div>
+  </body>
+</html>
