Przygotowanie headera do podpinania paneli.

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -40,16 +40,36 @@
       <div class="header__switcher -hidden">
         <div class="background"></div>
         <ul class="header__panel">
-          <li id="panel-loginButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-sign-in"></div></span>Logowanie</span></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-sign-in"></div></span>Odzyskaj konto</span></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-power-off"></div></span>Wyloguj</span></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-sign-in"></div></span>Ustawienia</span></li>
+          <li id="panel-autobusyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></li>
+          <li id="panel-przystankiButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></li>
+          <li id="panel-trasyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></li>
+          <li id="panel-uzytkownicyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></li>
+          <li id="panel-kontroleButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerProfile">
+      <div class="headerProfile__corner"></div>
+      <div class="headerProfile__switcher -hidden">
+        <div class="background"></div>
+        <ul class="headerProfile__panel">
+          <li id="panel-loginButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></li>
+          <li id="panel-registerButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></li>
+          <li id="panel-odzyskajKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></li>
+          <li id="panel-mojeKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li>
+          <li id="panel-ustawieniaButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-cogs"></div></span>Ustawienia</span></li>
+          <li id="panel-wylogujButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></li>
         </ul>
       </div>
     </div>
