--- a/szablon/main.html
+++ b/szablon/main.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
     <script>
       document.write('<script src="http://'
               + (location.host || 'localhost').split(':')[0]
