--- a/szablon/main.html
+++ b/szablon/main.html
@@ -76,7 +76,15 @@
     <div class="googleMaps">
       <div id="googleMaps" class="googleMaps__API"></div>
     </div>
-    <div class="panelLogin -hidden">
+    <div class="panelWelcome panel">
+      <div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG">
+          <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
+        <div class="panelWelcome__title">Witaj w systemie MPK</div>
+        <div class="panelWelcome__text">Projekt zespołowy.</div>
+        <div class="panelWelcome__navigation"><a href="#">Logowanie</a><a href="#">Rejestracja</a></div><span class="panelWelcome__close"><span class="panelWelcome__icon fa fa-times"></span></span>
+      </div>
+    </div>
+    <div class="panelLogin panel -hidden">
       <div class="panelLogin__wrapper">
         <div class="panelLogin__title">Panel Logowania</div>
         <div class="panelLogin__text">Prosze podać dane do logowania.</div>
