--- a/szablon/main.html
+++ b/szablon/main.html
@@ -1,8 +1,18 @@
-<!DOCTYPE html><html lang="pl"><head><title>Projekt Zespolow || MPK</title><meta charset="utf-8"><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="shortcut icon" href="/img/favicon/favicon.ico"><script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-        + ':35729/livereload.js"></'
-        + 'script>')
-</script><!-- bower:js -->
+<!DOCTYPE html>
+<html lang="pl">
+  <head>
+    <title>Projekt Zespolow || MPK</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
+    <script>
+      document.write('<script src="http://'
+              + (location.host || 'localhost').split(':')[0]
+              + ':35729/livereload.js"></'
+              + 'script>')
+      
+    </script><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
@@ -12,7 +22,92 @@
 <script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
 <script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
 <!-- endbower -->
-<!-- MAPY GOOGLA --><script src="http://maps.google.com/maps/api/js"></script><script src="https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js"></script><!-- MAPY GOOGLA --><script src="scripts/vendor.min.js"></script><!-- bower:css -->
+    <!-- MAPY GOOGLA -->
+    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js"></script><!-- MAPY GOOGLA -->
+    <script src="scripts/vendor.min.js"></script><!-- bower:css -->
 <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
-<!-- endbower --><link rel="stylesheet" href="css/main.css"></head><body><!--Created by salimike on 18.03.16.
---><div class="header"><div class="header__corner"></div><div class="header__switcher -hidden"><div class="background"></div><ul class="header__panel"><li id="panel-autobusyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG"><div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></li><li id="panel-przystankiButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG"><div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></li><li id="panel-trasyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG"><div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></li><li id="panel-uzytkownicyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG"><div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></li><li id="panel-kontroleButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG"><div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></li></ul></div></div><div class="headerProfile"><div class="headerProfile__corner"></div><div class="headerProfile__switcher -hidden"><div class="background"></div><ul class="headerProfile__panel"><li id="panel-loginButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></li><li id="panel-registerButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></li><li id="panel-odzyskajKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></li><li id="panel-mojeKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li><li id="panel-ustawieniaButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-cogs"></div></span>Ustawienia</span></li><li id="panel-wylogujButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG"><div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></li></ul></div></div><div class="googleMaps"><div id="googleMaps" class="googleMaps__API"></div></div><div class="panelWelcome panel"><div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG"><div class="panelWelcome__buttonIcon fa fa-bus"></div></span><div class="panelWelcome__title">Witaj w systemie MPK</div><div class="panelWelcome__text">Projekt zespołowy.</div><div class="panelWelcome__navigation"><a href="#">Logowanie</a><a href="#">Rejestracja</a></div><span class="panelWelcome__close"><span class="panelWelcome__icon fa fa-times"></span></span></div></div><div class="panelLogin panel -hidden"><div class="panelLogin__wrapper"><div class="panelLogin__title">Panel Logowania</div><div class="panelLogin__text">Prosze podać dane do logowania.</div><div class="panelLogin__form"><input placeholder="Prosze podać login"><input placeholder="Prosze podać nazwisko"><button type="submit">Zaloguj</button></div><span class="panelLogin__close"><span class="panelLogin__icon fa fa-times"></span></span></div></div></body></html>
+<!-- endbower -->
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <!--
+    Created by salimike on 18.03.16.
+    
+    -->
+    <div class="header">
+      <div class="header__corner"></div>
+      <div class="header__switcher -hidden">
+        <div class="background"></div>
+        <ul class="header__panel">
+          <li id="panel-autobusyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></li>
+          <li id="panel-przystankiButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></li>
+          <li id="panel-trasyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></li>
+          <li id="panel-uzytkownicyButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></li>
+          <li id="panel-kontroleButton" class="header__item"><span class="header__button"><span class="header__buttonIconBG">
+                <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="headerProfile">
+      <div class="headerProfile__corner"></div>
+      <div class="headerProfile__switcher -hidden">
+        <div class="background"></div>
+        <ul class="headerProfile__panel">
+          <li id="panel-loginButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></li>
+          <li id="panel-registerButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></li>
+          <li id="panel-odzyskajKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></li>
+          <li id="panel-mojeKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li>
+          <li id="panel-ustawieniaButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-cogs"></div></span>Ustawienia</span></li>
+          <li id="panel-wylogujButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="googleMaps">
+      <div id="googleMaps" class="googleMaps__API"></div>
+    </div>
+    <div class="panelWelcome panel">
+      <div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG">
+          <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
+        <div class="panelWelcome__title">Witaj w systemie MPK</div>
+        <div class="panelWelcome__text">Projekt zespołowy.</div>
+        <div class="panelWelcome__navigation">
+          <!--<a href="#" style="display:block;">Link #01</a>--><a href="#">Logowanie</a><a href="#">Rejestracja</a>
+        </div><span class="panelWelcome__close"><span class="panelWelcome__icon fa fa-times"></span></span>
+      </div>
+    </div>
+    <div class="panelLogin panel -hidden">
+      <div class="panelLogin__wrapper">
+        <div class="panelLogin__title">Panel Logowania</div>
+        <div class="panelLogin__text">Prosze podać dane do logowania.!!!</div>
+        <div class="panelLogin__form">
+          <input placeholder="Email">
+          <input type="password" placeholder="Hasło">
+          <button type="submit">Zaloguj</button>
+        </div><span class="panelLogin__close"><span class="panelLogin__icon fa fa-times"></span></span>
+      </div>
+    </div>
+    <div class="panelRegister panel -hidden">
+      <div class="panelRegister__wrapper">
+        <div class="panelRegister__title">Panel Rejestracji</div>
+        <div class="panelRegister__text">Prosze podać dane do Rejestracji.!!!</div>
+        <div class="panelRegister__form">
+          <input placeholder="Email">
+          <input type="password" placeholder="Hasło">
+          <input type="password" placeholder="Potwierdz Hasło">
+          <button type="submit">Zarajestuj</button>
+        </div><span class="panelRegister__close"><span class="panelRegister__icon fa fa-times"></span></span>
+      </div>
+    </div>
+  </body>
+</html>
