Komunikaty do Login i Register

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -89,8 +89,8 @@
     <div class="panelLogin panel -hidden">
       <div class="panelLogin__wrapper">
         <div class="panelLogin__title">Panel Logowania</div>
-        <div class="panelLogin__alert -info"><i class="fa fa-info-circle"></i>Konto o takim emailu nie istnieje.</div>
-        <div class="panelLogin__alert -danger"><i class="fa fa-info-circle"></i>Hasło przypisane do tego emailu, jest nie poprawne.</div>
+        <div class="panelLogin__alert -info -hidden"><i class="fa fa-info-circle"></i>Konto o takim emailu nie istnieje.</div>
+        <div class="panelLogin__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasło przypisane do tego emailu, jest nie poprawne.</div>
         <div class="panelLogin__form">
           <input placeholder="Email">
           <input type="password" placeholder="Hasło">
@@ -102,9 +102,10 @@
     <div class="panelRegister panel -hidden">
       <div class="panelRegister__wrapper">
         <div class="panelRegister__title">Panel Rejestracji</div>
-        <div class="panelRegister__alert -info"><i class="fa fa-info-circle"></i>Konto o takim emailu już istnieje.</div>
-        <div class="panelRegister__alert -info"><i class="fa fa-info-circle"></i>Wprowadzone dane są nie poprawne.</div>
-        <div class="panelRegister__alert -danger"><i class="fa fa-info-circle"></i>Hasła nie są takie same.</div>
+        <div class="panelRegister__alert -info -hidden"><i class="fa fa-info-circle"></i>Konto o takim emailu już istnieje.</div>
+        <div class="panelRegister__alert -info -hidden"><i class="fa fa-info-circle"></i>Wprowadzone dane są nie poprawne.</div>
+        <div class="panelRegister__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasła nie są takie same.</div>
+        <div class="panelRegister__alert -success -hidden">Konto zostało utworzone, na wskazany adres email został wysłany link aktywacyjny.</div>
         <div class="panelRegister__form">
           <input placeholder="Email">
           <input type="password" placeholder="Hasło">
