Panel odzyskiwania hasła z komunikatami

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -120,6 +120,7 @@
         <div class="panelResetPassword__title">Panel Odzyskiwania Hasła</div>
         <div class="panelResetPassword__alert -info -hidden"><i class="fa fa-info-circle"></i>Nie ma takiego konta.</div>
         <div class="panelResetPassword__alert -success -hidden">Na wskazany email został wysłany link weryfikacyjny.</div>
+        <div class="panelResetPassword__alert -success -hidden">Nowe hasło zostało ustawione. Możesz się teraz<a href="#" class="panelResetPassword__ToLogin">zalogować</a>.</div>
         <div class="panelResetPassword__form">
           <input placeholder="Email">
           <button type="submit">Odzyskaj hasło</button>
