Poprawnka panelu logowania

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -94,6 +94,10 @@
         <div class="panelLogin__form">
           <input placeholder="Email">
           <input type="password" placeholder="Hasło">
+          <div class="form-checkbox">
+            <input type="checkbox" checked id="check" class="check">
+            <label for="check"><span class="icon"></span> Zapamiętaj mnie</label>
+          </div>
           <button type="submit">Zaloguj się</button>
         </div><span class="panelLogin__close"><span class="panelLogin__icon fa fa-times"></span></span>
         <div class="panelLogin__navigation">Nie masz konta?<a href="#" class="panelLogin__ToRegister">Zarejestruj się.</a></div>
