Kosmetyka + alert  panelu logowania

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -89,7 +89,9 @@
     <div class="panelLogin panel -hidden">
       <div class="panelLogin__wrapper">
         <div class="panelLogin__title">Panel logowania</div>
-        <div class="panelLogin__alert -info -hidden"><i class="fa fa-info-circle"></i>Konto o takim emailu nie istnieje.</div>
+        <div class="panelLogin__alert -info -hidden">
+          <h3><i class="fa fa-warning"></i>Uwaga!</h3>Konto o takim adresie e-mail nie istnieje.
+        </div>
         <div class="panelLogin__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasło przypisane do tego emailu, jest nie poprawne.</div>
         <div class="panelLogin__form">
           <input placeholder="twój e-mail"><i class="fa fa-envelope-o"></i>
