--- a/szablon/main.html
+++ b/szablon/main.html
@@ -73,6 +73,7 @@
         </ul>
       </div>
     </div>
+    <div class="headerUserPanel"><span>Zalogowany: nazwaUzytkownika@cmok.pl</span></div>
     <div class="googleMaps">
       <div id="googleMaps" class="googleMaps__API"></div>
     </div>
@@ -135,6 +136,141 @@
           <button type="submit">Zatwierdz nowe hasło</button>
         </div><span class="panelResetPassword__close"><span class="panelResetPassword__icon fa fa-times"></span></span>
         <div class="panelResetPassword__navigation">Nie masz konta?<a href="#" class="panelResetPassword__ToRegister">Zarejestruj się.</a></div>
+      </div>
+    </div>
+    <div class="panelAutobusy panel -hidden">
+      <div class="panelAutobusy__wrapper">
+        <div class="panelAutobusy__title">Panel Zarządzania Autobusami</div>
+        <div class="panelAutobusy__subtitle">Zarządzanie flotą autobusów.</div>
+        <div class="panelAutobusy__navigation"><a href="#" class="panelAutobusy__navigation__item">Lista Autobusów</a><a href="#" class="panelAutobusy__navigation__item">Dodaj Autobus</a></div>
+        <div class="panelAutobusy__content">
+          <div class="panelAutobusy__content__Title">Lista Autobusów</div>
+          <div class="panelAutobusy__content__Filtr">
+            <div class="panelAutobusy__content__Filtr__item">
+              <input placeholder="Szukaj autobusu...">
+            </div>
+            <div class="panelAutobusy__content__Filtr__item">
+              <input placeholder="Filtr Stanów autobusu">
+            </div>
+            <div class="panelAutobusy__content__Filtr__item">
+              <input placeholder="Typ autobusu">
+            </div>
+            <div class="panelAutobusy__content__Filtr__item">
+              <input placeholder="Biletomat">
+            </div>
+          </div>
+          <div class="panelAutobusy__contentList"></div>
+          <div class="panelList">
+            <div class="panelList__header">
+              <div class="panelList__headeritemType">Typ</div>
+              <div class="panelList__headeritemName">Numer Autobusu</div>
+              <div class="panelList__headeritemStatus">Status</div>
+              <div class="panelList__headeritemBiletomat">Biletomat</div>
+              <div class="panelList__headeritemnavigation"></div>
+            </div>
+            <div class="panelList__content">
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">102</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">103</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">5</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">6</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">7</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">8</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">9</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">10</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+              <div class="panelList__item">
+                <div class="panelList__itemType">
+                  <div class="fa fa-bus"></div>
+                </div>
+                <div class="panelList__itemName">11</div>
+                <div class="panelList__itemStatus">Aktywny</div>
+                <div class="panelList__itemBiletomat">
+                  <div class="fa fa-times-circle-o"></div>
+                </div>
+                <div class="panelList__navigation">Zobacz szczegóły</div>
+              </div>
+            </div>
+          </div>
+        </div><span class="panelAutobusy__close"><span class="panelAutobusy__icon fa fa-times"></span></span>
       </div>
     </div>
   </body>
