--- a/szablon/main.html
+++ b/szablon/main.html
@@ -95,8 +95,12 @@
         </div>
         <div class="panelLogin__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasło przypisane do tego emailu, jest nie poprawne.</div>
         <div class="panelLogin__form">
-          <input placeholder="twój e-mail"><i class="fa fa-envelope-o"></i>
-          <input type="password" placeholder="hasło"><i class="fa fa-lock"></i>
+          <div class="panelLogin__formwrapper">
+            <input placeholder="twój e-mail"><i class="fa fa-envelope-o"></i>
+          </div>
+          <div class="panelLogin__formwrapper">
+            <input type="password" placeholder="hasło"><i class="fa fa-lock"></i>
+          </div>
           <div class="remembermebox">
             <input type="checkbox" checked id="check" class="check">
             <label for="check"><span class="icon"></span> Zapamiętaj mnie</label>
