--- a/szablon/main.html
+++ b/szablon/main.html
@@ -89,17 +89,19 @@
     </div>
     <div class="panelLogin panel -hidden">
       <div class="panelLogin__wrapper">
-        <div class="panelLogin__title">Panel logowania</div>
-        <div class="panelLogin__alert -info -hidden">
+        <div class="panelLogin__title">Panel Logowania</div>
+        <div class="panelLogin__alert -info hidden">
           <h3><i class="fa fa-warning"></i>Uwaga!</h3>Konto o takim adresie e-mail nie istnieje.
         </div>
-        <div class="panelLogin__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasło przypisane do tego emailu, jest nie poprawne.</div>
+        <div class="panelLogin__alert -info hidden">
+          <h3><i class="fa fa-warning"></i>Uwaga!</h3>Hasło przypisane do tego emailu, jest nie poprawne.
+        </div>
         <div class="panelLogin__form">
           <div class="panelLogin__formwrapper">
-            <input placeholder="twój e-mail"><i class="fa fa-envelope-o"></i>
+            <input placeholder="E-mail"><i class="fa fa-envelope-o"></i>
           </div>
           <div class="panelLogin__formwrapper">
-            <input type="password" placeholder="hasło"><i class="fa fa-lock"></i>
+            <input type="password" placeholder="Hasło"><i class="fa fa-lock"></i>
           </div>
           <div class="remembermebox">
             <input type="checkbox" checked id="check" class="check">
@@ -113,14 +115,28 @@
     <div class="panelRegister panel -hidden">
       <div class="panelRegister__wrapper">
         <div class="panelRegister__title">Panel Rejestracji</div>
-        <div class="panelRegister__alert -info -hidden"><i class="fa fa-info-circle"></i>Konto o takim emailu już istnieje.</div>
-        <div class="panelRegister__alert -info -hidden"><i class="fa fa-info-circle"></i>Wprowadzone dane są nie poprawne.</div>
-        <div class="panelRegister__alert -danger -hidden"><i class="fa fa-info-circle"></i>Hasła nie są takie same.</div>
-        <div class="panelRegister__alert -success -hidden">Konto zostało utworzone, na wskazany adres email został wysłany link aktywacyjny.</div>
+        <div class="panelRegister__alert -info -hidden">
+          <h3><i class="fa fa-warning"></i>Uwaga!</h3>Konto o takim emailu już istnieje.
+        </div>
+        <div class="panelRegister__alert -info -hidden">
+          <h3><i class="fa fa-warning"></i>Uwaga!</h3>Wprowadzone dane są nie poprawne.
+        </div>
+        <div class="panelRegister__alert -danger -hidden">
+          <h3><i class="fa fa-warning"></i>Błąd!</h3>Hasła nie są takie same.
+        </div>
+        <div class="panelRegister__alert -success -hidden">
+          <h3><i class="fa fa-info"></i>Informacja!</h3>Konto zostało utworzone, na wskazany adres email został wysłany link aktywacyjny.
+        </div>
         <div class="panelRegister__form">
-          <input placeholder="Email">
-          <input type="password" placeholder="Hasło">
-          <input type="password" placeholder="Potwierdz Hasło">
+          <div class="panelLogin__formwrapper">
+            <input placeholder="E-mail"><i class="fa fa-envelope-o"></i>
+          </div>
+          <div class="panelLogin__formwrapper">
+            <input type="password" placeholder="Hasło"><i class="fa fa-lock"></i>
+          </div>
+          <div class="panelLogin__formwrapper">
+            <input type="password" placeholder="Powtórz hasło"><i class="fa fa-lock"></i>
+          </div>
           <button type="submit">Zarajestuj</button>
         </div><span class="panelRegister__close"><span class="panelRegister__icon fa fa-times"></span></span>
         <div class="panelRegister__navigation">Masz już konto?<a href="#" class="panelRegister__ToLogin">Zaloguj się.</a></div>
