Poprawki do listy autobusow

--- a/szablon/main.html
+++ b/szablon/main.html
@@ -67,8 +67,8 @@
                 <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></li>
           <li id="panel-mojeKontoButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                 <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li>
-          <li id="panel-ustawieniaButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-cogs"></div></span>Ustawienia</span></li>
+          <li id="panel-InformacjeButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></li>
           <li id="panel-wylogujButton" class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                 <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></li>
         </ul>
@@ -198,114 +198,115 @@
                 <input placeholder="Biletomat">
               </div>
             </div>
-            <div class="panelAutobusy__contentList"></div>
-            <div class="panelList">
-              <div class="panelList__header">
-                <div class="panelList__headeritemType">Typ</div>
-                <div class="panelList__headeritemName">Numer Autobusu</div>
-                <div class="panelList__headeritemStatus">Status</div>
-                <div class="panelList__headeritemBiletomat">Biletomat</div>
-                <div class="panelList__headeritemnavigation"></div>
-              </div>
-              <div class="panelList__content">
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
-                  </div>
-                  <div class="panelList__itemName">102</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
-                  </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
+            <div class="panelAutobusy__contentList">
+              <div class="panelList">
+                <div class="panelList__header">
+                  <div class="panelList__headeritemType">Typ</div>
+                  <div class="panelList__headeritemName">Numer Autobusu</div>
+                  <div class="panelList__headeritemStatus">Status</div>
+                  <div class="panelList__headeritemBiletomat">Biletomat</div>
+                  <div class="panelList__headeritemnavigation">Szczegóły</div>
                 </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
+                <div class="panelList__content">
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">102</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__itemName">103</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">103</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">5</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__itemName">5</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">6</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">7</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__itemName">6</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">8</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">9</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__itemName">7</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">10</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">11</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz szczegóły</div>
                   </div>
-                  <div class="panelList__itemName">8</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
-                  </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
-                  </div>
-                  <div class="panelList__itemName">9</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
-                  </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
-                  </div>
-                  <div class="panelList__itemName">10</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
-                  </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
-                </div>
-                <div class="panelList__item">
-                  <div class="panelList__itemType">
-                    <div class="fa fa-bus"></div>
-                  </div>
-                  <div class="panelList__itemName">11</div>
-                  <div class="panelList__itemStatus">Aktywny</div>
-                  <div class="panelList__itemBiletomat">
-                    <div class="fa fa-times-circle-o"></div>
-                  </div>
-                  <div class="panelList__navigation">Zobacz szczegóły</div>
                 </div>
               </div>
             </div>
