--- a/szablon/main.html
+++ b/szablon/main.html
@@ -218,7 +218,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -229,7 +229,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -240,7 +240,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -251,7 +251,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -262,7 +262,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -273,7 +273,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -284,7 +284,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -295,7 +295,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                   <div class="panelList__item">
                     <div class="panelList__itemType">
@@ -306,7 +306,7 @@
                     <div class="panelList__itemBiletomat">
                       <div class="fa fa-times-circle-o"></div>
                     </div>
-                    <div class="panelList__navigation">Zobacz szczegóły</div>
+                    <div class="panelList__navigation">Zobacz</div>
                   </div>
                 </div>
               </div>
