--- a/szablon/main.html
+++ b/szablon/main.html
@@ -318,7 +318,27 @@
         <div class="panelDodajAutobus panel -hidden dragger">
           <div class="panelDodajAutobus__wrapper">
             <div class="panelDodajAutobus__title">Dodaj Autobus</div>
-            <div class="panelDodajAutobus__subtitle">Panel dodawania nowych autobusów.</div><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span>
+            <div class="panelDodajAutobus__subtitle">Panel dodawania nowych autobusów.</div>
+            <div class="panelDodajAutobus__content">
+              <div class="panelDodajAutobus__content__Title">Dane Autobusu</div>
+              <div class="panelDodajAutobus__content__Filtr">
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Numer Rejestracyjny">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Numer Autobusu">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Typ autobusu">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Biletomat">
+                </div>
+              </div>
+            </div>
+            <div class="panelDodajAutobus__navigation">
+              <button class="panelDodajAutobus__navigation__item">Dodaj Autobus</button><a href="#" class="panelDodajAutobus__navigation__item -abort">Anuluj</a>
+            </div><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span>
           </div>
         </div>
       </div>
