--- a/szablon/main.html
+++ b/szablon/main.html
@@ -346,7 +346,7 @@
         <div class="panelPrzystanki__wrapper">
           <div class="panelPrzystanki__title">Panel Zarządzania Przystankami</div>
           <div class="panelPrzystanki__subtitle">Zarządzanie przystankami w systemie.</div>
-          <div class="panelPrzystanki__navigation"><a href="#" id="panel-DodajautobusyButton" class="panelPrzystanki__navigation__item">Dodaj Przystanek</a></div>
+          <div class="panelPrzystanki__navigation"><a href="#" id="panel-DodajPrzystanekButton" class="panelPrzystanki__navigation__item">Dodaj Przystanek</a></div>
           <div class="panelPrzystanki__content">
             <div class="panelPrzystanki__content__Title">Lista Przystanków</div>
             <div class="panelPrzystanki__content__Filtr">
@@ -372,7 +372,7 @@
                   <div class="panelList__headeritemBiletomat">Biletomat</div>
                   <div class="panelList__headeritemnavigation">Szczegóły</div>
                 </div>
-                <div class="panelAutobusy__list panelList__content">
+                <div class="panelPrzystanki__list panelList__content">
                   <div class="panelList__item">
                     <div class="panelList__itemType">
                       <div class="fa fa-bus"></div>
@@ -478,31 +478,34 @@
           </div><span class="panelPrzystanki__close"><span class="panelPrzystanki__icon fa fa-times"></span></span>
         </div>
       </div>
-      <div class="panelDodajAutobus__dragger">
-        <div class="panelDodajAutobus panel -hidden dragger">
-          <div class="panelDodajAutobus__wrapper">
-            <div class="panelDodajAutobus__title">Dodaj Autobus</div>
-            <div class="panelDodajAutobus__subtitle">Panel dodawania nowych autobusów.</div>
-            <div class="panelDodajAutobus__content">
-              <div class="panelDodajAutobus__content__Title">Dane Autobusu</div>
-              <div class="panelDodajAutobus__content__Filtr">
-                <div class="panelDodajAutobus__content__Filtr__item">
-                  <input placeholder="Numer Rejestracyjny">
+      <div class="panelDodajPrzystanek__dragger">
+        <div class="panelDodajPrzystanek panel -hidden dragger">
+          <div class="panelDodajPrzystanek__wrapper">
+            <div class="panelDodajPrzystanek__title">Dodaj Przystanek</div>
+            <div class="panelDodajPrzystanek__subtitle">Panel dodawania nowych przystanków.</div>
+            <div class="panelDodajPrzystanek__content">
+              <div class="panelDodajPrzystanek__content__Title">Dane Przystanku</div>
+              <div class="panelDodajPrzystanek__content__Filtr">
+                <div class="panelDodajPrzystanek__content__Filtr__item">
+                  <input placeholder="Nazwa przystanku">
                 </div>
-                <div class="panelDodajAutobus__content__Filtr__item">
-                  <input placeholder="Numer VIN">
+                <div class="panelDodajPrzystanek__content__Filtr__item">
+                  <input placeholder="Lokalizacja">
                 </div>
-                <div class="panelDodajAutobus__content__Filtr__item">
-                  <input placeholder="Typ autobusu">
-                </div>
-                <div class="panelDodajAutobus__content__Filtr__item">
+                <div class="panelDodajPrzystanek__content__Filtr__item">
                   <input placeholder="Biletomat">
+                </div>
+                <div class="panelDodajPrzystanek__content__Filtr__item">
+                  <input placeholder="Kiosk">
+                </div>
+                <div class="panelDodajPrzystanek__content__Filtr__item">
+                  <input placeholder="Typ przystanku">
                 </div>
               </div>
             </div>
-            <div class="panelDodajAutobus__navigation">
-              <button class="panelDodajAutobus__navigation__item">Dodaj Autobus</button><a href="#" class="panelDodajAutobus__navigation__item -abort">Anuluj</a>
-            </div><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span>
+            <div class="panelDodajPrzystanek__navigation">
+              <button class="panelDodajPrzystanek__navigation__item">Dodaj Autobus</button><a href="#" class="panelDodajPrzystanek__navigation__item -abort">Anuluj</a>
+            </div><span class="panelDodajPrzystanek__close"><span class="panelDodajPrzystanek__icon fa fa-times"></span></span>
           </div>
         </div>
       </div>
